{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 8,
  "lineage": "bf60dffe-6031-ca36-11ab-eef65ce0fca1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gh_actions_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:869935075017:internet-gateway/igw-03cfd5b3ca31f3a9f",
            "id": "igw-03cfd5b3ca31f3a9f",
            "owner_id": "869935075017",
            "tags": {
              "Name": "gh-actions-igw"
            },
            "tags_all": {
              "Name": "gh-actions-igw"
            },
            "vpc_id": "vpc-0b680ecbc72fa2d7a"
          },
          "dependencies": [
            "aws_vpc.gh_actions_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gh_actions_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:869935075017:route-table/rtb-0c7d26bbc190cc62c",
            "id": "rtb-0c7d26bbc190cc62c",
            "owner_id": "869935075017",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03cfd5b3ca31f3a9f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gh-actions-route-table"
            },
            "tags_all": {
              "Name": "gh-actions-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b680ecbc72fa2d7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gh_actions_igw",
            "aws_vpc.gh_actions_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gh_actions_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a775d403b93edd7",
            "route_table_id": "rtb-0c7d26bbc190cc62c",
            "subnet_id": "subnet-0535a0ee1b53af930"
          },
          "dependencies": [
            "aws_internet_gateway.gh_actions_igw",
            "aws_route_table.gh_actions_route_table",
            "aws_subnet.gh_actions_subnet",
            "aws_vpc.gh_actions_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gh_actions_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:869935075017:security-group/sg-0fe4110ca3ab07ce4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe4110ca3ab07ce4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow NodePort traffic",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "gh-actions-sg20241222213642415000000001",
            "name_prefix": "gh-actions-sg",
            "owner_id": "869935075017",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gh-actions-security-group"
            },
            "tags_all": {
              "Name": "gh-actions-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b680ecbc72fa2d7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gh_actions_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gh_actions_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:869935075017:subnet/subnet-0535a0ee1b53af930",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0535a0ee1b53af930",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "869935075017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gh-actions-public-subnet"
            },
            "tags_all": {
              "Name": "gh-actions-public-subnet"
            },
            "vpc_id": "vpc-0b680ecbc72fa2d7a"
          },
          "dependencies": [
            "aws_vpc.gh_actions_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gh_actions_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:869935075017:vpc/vpc-0b680ecbc72fa2d7a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-090d61c1f943d4d24",
            "default_route_table_id": "rtb-08dd94a12c4e2f06e",
            "default_security_group_id": "sg-075ef000142440756",
            "dhcp_options_id": "dopt-0c7fe89858c215e27",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b680ecbc72fa2d7a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08dd94a12c4e2f06e",
            "owner_id": "869935075017",
            "tags": {
              "Name": "gh-actions-vpc"
            },
            "tags_all": {
              "Name": "gh-actions-vpc"
            }
          }
        }
      ]
    }
  ]
}